feat: :sparkles: Adiciona o component ToDo a aplicação
O componente ToDo adiciona uma tarefa a lista de tarefas da página principal. Para cada tarefa, o componente ToDo adiciona um botão para editar e outro para apagar a tarefa.

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,33 @@ input {
   padding: 0.5rem;
   border-bottom: 1px solid #000;
 }
+
+.add {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+}
+
+.todo {
+  position: relative;
+  margin-top: 1rem;
+  background-color: #000;
+  color: #fff;
+  padding: 1.5rem 3rem;
+  border-radius: 5px;
+}
+
+.icons {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.icon {
+  cursor: pointer;
+  font-size: 20px;
+}
