--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,15 @@
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue",
-    sans-serif;
+  background-image: url('/public/back.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Layout */
 .container {
   max-width: 600px;
   margin: auto;
@@ -22,47 +24,133 @@ h1 {
   text-align: center;
 }
 
+/* Form */
 .top {
-  margin-top: 1rem;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   gap: 1rem;
-  justify-content: center;
+  margin-top: 1rem;
 }
 
-input {
-  border: none;
-  outline: none;
-  width: 400px;
+input[type="text"], input[type="date"], input[type="time"] {
+  flex: 1;
   padding: 0.5rem;
-  border-bottom: 1px solid #000;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
 }
 
 .add {
   background-color: #000;
   color: #fff;
   padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 0.25rem;
   cursor: pointer;
 }
 
+.add:hover {
+  background-color: #555;
+}
+
+/* Lista */
+.list {
+  margin-bottom: 2rem; /* Adiciona uma margem inferior entre a lista de cartões e a linha de adição */
+}
+
+/* To-Do */
 .todo {
-  position: relative;
   margin-top: 1rem;
+  margin-bottom: 1rem; /* Adiciona uma margem inferior entre os cartões */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+  border: 1px solid black; /* Adiciona uma borda preta */
+  border-radius: 5px;
   background-color: #000;
   color: #fff;
-  padding: 1.5rem 3rem;
-  border-radius: 5px;
+  position: relative;
+}
+.todo .CgCheck0 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  cursor: pointer;
 }
 
 .icons {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 20px;
   display: flex;
   gap: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .icon {
   cursor: pointer;
   font-size: 20px;
+}
+
+.icon:hover {
+  color: #007bff;
+}
+
+/* Task Details */
+.task-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.task-text {
+  font-size: 1.2em;
+  margin-bottom: 0.5rem; /* Adiciona espaço entre o texto e a data */
+}
+
+.task-date,
+.task-prazo {
+  color: #888;
+}
+
+/* Data e hora */
+.date, .time {
+  font-size: 0.49em;
+  font-style: italic;
+}
+
+.date-time {
+  display: flex;
+  flex-direction: column;
+}
+
+.date {
+  margin-top: 5px; 
+}
+
+.time {
+  margin-top: 2px; 
+}
+
+/* Highlight e Completed */
+.highlight {
+  font-weight: bold;
+}
+
+.completed {
+  text-decoration: line-through;
+}
+
+/* Cards (apagar antes de postar) */
+.todo.green {
+  background-color: green;
+}
+
+.todo.red {
+  background-color: #8b0000;
+}
+
+.todo.orange {
+  background-color: orange;
+}
+
+.todo.yellow {
+   background-color:  #b89e14;
 }
